PG-0 Improve access and guide onboarding flows
